fixing project heigh bug on mobile

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -247,6 +247,7 @@ p {
 
         img {
           width: 100%;
+          max-height: 250px;
         }
       }
 
